Added some blogs

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 	            <ul class="nav-menu">
 	              <li><a href="index.html">Home</a></li>
 	              <li><a href="about.html" style="color: #0056b3;">About</a></li>
-	              <li><a href="portfolio.html">Portfolio</a></li>
+	              <li><a href="portfolio.html">Blogs</a></li>
 	              <li><a href="GauravKandel.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
