--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	            <ul class="nav-menu">
 	              <li><a href="index.html" style="color: #0056b3;">Home</a></li>
 	              <li><a href="about.html">About</a></li>
-	              <li><a href="portfolio.html">Portfolio</a></li>
+	              <li><a href="portfolio.html">Blogs</a></li>
 	              <li><a href="GauravKandel.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a></li>
 	              </ul>
 
@@ -202,7 +202,7 @@
 			<div class="single-portfolio col-sm-4 all NLP">
 				<div class="relative">
 					<div class="thumb">
-						<!-- <div class="overlay overlay-bg"></div> -->
+						<!--  -->
 							<img class="image img-fluid" src="img/algo1.jpg" alt="">
 					</div>
 				</div>
@@ -222,7 +222,7 @@
 			<div class="single-portfolio col-sm-4 all NLP">
 				<div class="relative">
 					<div class="thumb">
-						<!-- <div class="overlay overlay-bg"></div> -->
+						<!--  -->
 							<img class="image img-fluid" src="img/algo1.jpg" alt="">
 					</div>
 					<a href="#">
@@ -246,7 +246,7 @@
 			<div class="single-portfolio col-sm-4 all NLP">
 				<div class="relative">
 					<div class="thumb">
-						<!-- <div class="overlay overlay-bg"></div> -->
+						<!--  -->
 							<img class="image img-fluid" src="img/algo1.jpg" alt="">
 					</div>
 					<a href="#">
