--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 
 							<h2 class="mt-10 mb-20">Gaurav Kandel</h2>
 							<p>
-								Data Scientist from India. Inspired by tough problems.
+								Data Scientist from India.
 							</p>
 							<a href="portfolio.html" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
 						<div class="col-lg-6 col-md-6 col-xs-6 banner-right align-self-center">
-							<img src="img/gaurav3.png" style="height:auto;max-width:65%;">
+							<img src="img/me.png" style="height:auto;max-width:65%;">
 						</div>
 					</div>
 				</div>
