--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 					<div class="section-top-border">
 					<div class="row align-items-center justify-content-between">
 						<div class="col-lg-6 col-md-6 home-about-left">
-							<img class="img-fluid" src="img/gaurav3.png" alt="" height="300" width="300">
+							<img class="img-fluid" src="img/me.png" alt="" height="300" width="300">
 						</div>
 						<div class="col-lg-5 col-md-6 home-about-right">
 							<h1 class="text-uppercase">Personal Details</h1>
