Updated Blog Pages

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
 							<h2 class="mt-10 mb-20">Gaurav Kandel</h2>
 							<p>
-								Data Scientist from India.
+								Learning and growing as a Data Scientist.
 							</p>
-							<a href="portfolio.html" class="primary-btn text-uppercase mb-20">My Projects</a>
+							<a href="https://www.linkedin.com/in/gaurav98094/" class="primary-btn text-uppercase mb-20">Contact Me</a>
 						</div>
 						<div class="col-lg-6 col-md-6 col-xs-6 banner-right align-self-center">
 							<img src="img/me.png" style="height:auto;max-width:65%;">
