--- a/portfolio.html
+++ b/portfolio.html
@@ -152,19 +152,18 @@
 							<div class="single-portfolio col-sm-4 all NLP">
 								<div class="relative">
 									<div class="thumb">
-										
-											<img class="image img-fluid" src="img/algo1.jpg" alt="">
+											<img class="image img-fluid" src="img/regularizer.png" alt="">
 									</div>
-									<a href="#">
+									<a href="https://medium.com/@dswithgk/comparing-ols-and-regularized-regression-models-for-forward-and-backward-decoding-paper-series-02cfa587ec54">
 										<div class="middle">
 											<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 										</div>
 									</a>
 								</div>
 								<div class="p-inner">
-									<a href="#">
-										<h5>Coming Soon</h5></a>
-										<div class="cat">#</div>
+									<a href="https://medium.com/@dswithgk/comparing-ols-and-regularized-regression-models-for-forward-and-backward-decoding-paper-series-02cfa587ec54">
+										<h5>Comparing Regularizer Techniques</h5></a>
+										<div class="cat">Research Paper Series</div>
 								</div>
 							</div>
 
@@ -172,22 +171,20 @@
 							<div class="single-portfolio col-sm-4 all NLP">
 								<div class="relative">
 									<div class="thumb">
-										
-											<img class="image img-fluid" src="img/algo1.jpg" alt="">
+											<img class="image img-fluid" src="img/pca2.png" alt="">
 									</div>
-									<a href="#">
-										<div class="middle">
-											<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
-										</div>
+									<a href="https://medium.com/@dswithgk/principal-component-analysis-pca-a-comprehensive-guide-935a75367fba">
 									</a>
+									<div class="middle">
+										<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+									</div>
 								</div>
 								<div class="p-inner">
-									<a href="#">
-										<h5>Coming Soon</h5></a>
-										<div class="cat">#</div>
+									<a href="https://medium.com/@dswithgk/principal-component-analysis-pca-a-comprehensive-guide-935a75367fba">
+										<h5>Maths Behind PCA</h5></a>
+										<div class="cat">Daily Learning Series</div>
 								</div>
 							</div>
-
 
 							<div class="single-portfolio col-sm-4 all NLP">
 								<div class="relative">
